[gd_scene load_steps=33 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Spritesheets/Bee_anim_64.png" type="Texture" id=2]
[ext_resource path="res://Player/spot.png" type="Texture" id=3]
[ext_resource path="res://Player/LightTexture_128.png" type="Texture" id=4]
[ext_resource path="res://Player/Other/background.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.99997
height = 0.0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle_d"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "idle_l"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle_r"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle_u"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk_d"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 0, 5, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk_l"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 3, 11, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk_r"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 1, 7, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk_u"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 2, 9, 2 ]
}

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "idle_l"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "idle_d"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "idle_r"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "idle_u"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 36 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 37 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 38 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 39 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "walk_l"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "walk_d"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "walk_r"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "walk_u"

[sub_resource type="AnimationNodeBlendSpace2D" id=23]
blend_point_0/node = SubResource( 40 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 41 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 42 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 43 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachine" id=17]
states/Idle/node = SubResource( 16 )
states/Idle/position = Vector2( 632, 205 )
states/Walk/node = SubResource( 23 )
states/Walk/position = Vector2( 798.667, 203.667 )
transitions = [ "Idle", "Walk", SubResource( 24 ), "Walk", "Idle", SubResource( 25 ) ]
start_node = "Idle"
graph_offset = Vector2( 10, 27 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=18]

[sub_resource type="CircleShape2D" id=46]
radius = 21.0

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 8.00001, 6 )

[sub_resource type="CapsuleShape2D" id=45]
radius = 16.0
height = 16.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
scale = Vector2( 4.125, 2.125 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
hframes = 4
vframes = 3
frame = 1

[node name="Collider" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/idle_d = SubResource( 9 )
anims/idle_l = SubResource( 10 )
anims/idle_r = SubResource( 8 )
anims/idle_u = SubResource( 11 )
anims/walk_d = SubResource( 7 )
anims/walk_l = SubResource( 6 )
anims/walk_r = SubResource( 3 )
anims/walk_u = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 17 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 18 )
parameters/Idle/blend_position = Vector2( 0.167647, 0.138 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="Flashlight" type="Light2D" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 64, 0 )
color = Color( 0.996078, 0.917647, 0.505882, 1 )
shadow_enabled = true

[node name="Source" type="Sprite" parent="Flashlight"]
position = Vector2( 0, -3.38813e-21 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="FlashlightArea" type="Area2D" parent="Flashlight"]
collision_layer = 2

[node name="FlashlightCollider" type="CollisionPolygon2D" parent="Flashlight/FlashlightArea"]
polygon = PoolVector2Array( 128, -64, 128, 64, 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flashlight/FlashlightArea"]
shape = SubResource( 46 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
rotation = -1.5708
shape = SubResource( 47 )

[node name="InteractBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractBox"]
position = Vector2( 0, -8 )
shape = SubResource( 45 )

[node name="PlayerGlow" type="Light2D" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )
texture_scale = 0.5
color = Color( 0.670588, 0.607843, 0.32549, 1 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="InteractBox" to="." method="_on_InteractBox_area_entered"]
[connection signal="area_exited" from="InteractBox" to="." method="_on_InteractBox_area_exited"]
